# lingua

./: pyproject.toml
apps/fastRNN/: eval.py
apps/main/: eval.py
apps/mamba/: eval.py
apps/mtp/: eval.py
