[project]
name = "lingua"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "ninja",
    "torch==2.5.0",
    "xformers",
    "numpy",
    "omegaconf",
    "msgspec",
    "rouge-score",
    "sacrebleu",
    "sentencepiece",
    "tiktoken",
    "fsspec",
    "blobfile",
    "wandb",
    "viztracer",
    "lm-eval",
    "scipy",
    "pynvml",
    "datatrove",
    "orjson",
] 

[tool.uv.sources]
xformers = { index = "pytorch" }
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv]
constraint-dependencies = ["evaluate>=0.4.3", "datasets>=3.5.0"]
