[project]
name = "lingua"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "ninja",
    "torch==2.5.0",
    "xformers",
    "numpy",
    "omegaconf",
    "msgspec",
    "rouge-score",
    "sacrebleu",
    "sentencepiece",
    "tiktoken",
    "fsspec",
    "blobfile",
    "wandb",
    "viztracer",
    "lm-eval",
    "scipy",
    "pynvml",
    "datatrove",
    "orjson",
]

[tool.uv.sources]
xformers = { index = "pytorch" }
torch = { index = "pytorch" }
# Waiting on a fix for a typo
lm-eval = { git = "https://github.com/EleutherAI/lm-evaluation-harness.git" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
